[package]
name = "webrtc-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hypermangle-core = "0.4.6"
rand = "0.8.*"
fxhash = "0.2.*"
serde_json = "1.0.*"
axum = { "version" = "0.6.*", features = ["macros"] }

[dependencies.tokio]
version = "1.30.*"
features = ["macros"]

[profile.release]
lto = true